And Byte.  It also recommends going after Character in F:\Freenet-source\freenet\src\freenet\support\HTMLEntities.java, but there is ~270 entries there in a private static final object charArray.  I don't know that it would help??
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@24831 67a373e5-eb02-0410-a15c-ee090a768436